# proof-generation

./: .cruft.json  .dockerignore  .gitignore  .gitmodules  .style.yapf  Cargo.toml  Dockerfile  LICENSE  Makefile  README-dsl.md  README.md  _config.yml  aml.py  bot-elim.itp  comm  draft  flake.nix  imp-transitivity.itp  index.md  main.py  matching-logic-250-loc.mm  proof-language.md  pyproject.toml  requirements-dev.txt  requirements.txt  tableau.py  tableau_test.py  test  test_aml.py  test_tableau.py
.cargo/: config
_posts/: 2020-11-21-welcome-to-jekyll.markdown
circuit-files/: README.md  metamath_input_wff_mm.json
evaluation/: Makefile  README.md  stats.py
example/: imp.k  spec.k
generator/: parameter.py
hooks/: post_checkout  post_push
image/: Dockerfile  README.md  init.sh
itp/: README.md  __main__.py  ansi.py  ast.py  auto.py  env.py  extension.py  parser.py  state.py  tactics.py
mm-benchmarks/: .gitignore  CMakeLists.txt  README.md  checkmm-nr.cpp  getTruthTable.cpp  impreflex.mm  mapTokens.cpp  perceptron.mm  svm5.mm  transfer-goal.mm  transfer5000.mm
proof/: encoder.py  env.py  equality.py  functional.py  quantifier.py  rewrite.py  sort.py  subsorting.py  substitution.py  unification.py
rec-k-unconditional/: benchexpr10.k  benchexpr20.k  benchexpr22.k  benchsym10.k  benchsym20.k  benchsym22.k  benchtree10.k  benchtree20.k  benchtree22.k  calls.k  check1.k  check2.k  empty.k  factorial5.k  factorial6.k  factorial7.k  factorial8.k  factorial9.k  fibonacci05.k  fibonacci18.k  fibonacci19.k  fibonacci20.k  fibonacci21.k  garbagecollection.k  langton6.k  langton7.k  mul16.k  mul8.k  natlist.k  omul8.k  permutations6.k  permutations7.k  revnat100.k  revnat1000.k  revnat10000.k  soundnessofparallelengines.k
rust-metamath/: Cargo.toml  README.md
scripts/: benchmark.py  compress.py  congruence-prover.py  extract_lemma.py  fm21.py  pretty.py  proof-stats.py  proof_stats.py  prove_reachability.py  prove_symbolic.py  run-test.py  run_test.py  runtest.py  substitution-prover.py  test
tests/: __main__.py  test_encoder.py  test_integration.py
theory/: kore-disjointness.mm  kore-equality.mm  kore-fol.mm  kore-fresh.mm  kore-lemmas.mm  kore-notation.mm  kore-predicate.mm  kore-propositional.mm  kore-reachability.mm  kore-semantics.mm  kore-sorting.mm  kore-substitution.mm  kore.mm  matching-logic-200-loc.mm  matching-logic-240-loc.mm  matching-logic-250-loc.mm  matching-logic-desugar.mm  matching-logic-disjointness.mm  matching-logic-membership.mm  matching-logic-nn.mm  matching-logic-predicate.mm  matching-logic-prelude-lemmas.mm  matching-logic-prelude.mm  matching-logic-propositional.mm  matching-logic.mm  prelude.mm  propositional.mm  rest_of_meredith.mm  substitution.mm  (+1 more)
(+28733 files in other folders)
