[tool.poetry]
name = "proof-generation"
version = "0.1.0"
description = "Proof generation for the K Framework"
authors = ["Your Name <you@example.com>"]
license = "BSD-3-Clause"
readme = "README.md"
packages = [{include = "ml"}]

[tool.poetry.dependencies]
python = "^3.9"
lark-parser = "^0.12.0"
schema = "^0.7.5"
pyyaml = "^6.0"
z3-solver = "^4.12.1.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
pytest = "^7.3.1"
yapf = "^0.33.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
