[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "proof-generation"
version = "0.1.0"
description = "Proof generation for the K Framework"
authors = [
    "Runtime Verification, Inc. <contact@runtimeverification.com>",
]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"
pyk = { git = "https://github.com/runtimeverification/pyk.git", tag = "v0.1.551" }
schema = "^0.7.5"
z3-solver = "^4.12.1.0"
lark = "^1.1.5"

[tool.poetry.group.dev.dependencies]
autoflake = "*"
black = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-comprehensions = "*"
flake8-quotes = "*"
flake8-type-checking = "*"
isort = "*"
mypy = "*"
pep8-naming = "*"
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
pytest-xdist = "*"
pyupgrade = "*"
types-pyyaml = "^6.0.12.10"

[tool.poetry.scripts]
gen-rewrite-proof = "proof_generation.rewrite.__main__:main"
metamath-extract = "proof_generation.scripts.metamath-extract:main"

[tool.isort]
profile = "black"
line_length = 120

[tool.autoflake]
recursive = true
expand-star-imports = true
remove-all-unused-imports = true
ignore-init-module-imports = true
remove-duplicate-keys = true
remove-unused-variables = true

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.mypy]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "schema"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "z3"
ignore_missing_imports = true
